--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "lint": "eslint src",
     "lint:fix": "eslint --fix src/",
     "prettier": "prettier --write .",
+    "pngquant": "find media -type f -name '*.png' -exec pngquant -f --speed 1 --strip --skip-if-larger -- \\{\\} \\;",
     "test": "vscode-test"
   },
   "devDependencies": {
